# bittorrent-client

./: .gitignore  CMakeLists.txt  build.sh  run.sh
.cache/clangd/index/: bencode.c.FDA0CF68C23FD185.idx  bencode.h.5C5BB89FA4D1B51D.idx  file.c.034795BE46F40691.idx  file.h.73B6350621D1098C.idx  main.c.FFE025862A2A5D8E.idx  metadata.c.3C6292D98997D75B.idx  metadata.h.B3BE43016955E71C.idx  types.h.1D06D3AC248DB677.idx  url.c.9AA4CC198057E067.idx  url.h.A5F4D46EF8B5E87E.idx
include/: bencode.h  downloader.h  metadata.h  peer.h  tracker.h
include/utils/: file.h  url.h
src/: bencode.c  downloader.c  main.c  metadata.c  peer.c  tracker.c
src/utils/: file.c  url.c
